# pico-tflmicro-rp2350

./: CMakeLists.txt  CMakeLists_riscv.txt  README.md
examples/hello_world/: CMakeLists.txt  fall_detection_main.cpp  glucose_main.cpp  main_functions.cpp  mlp_glucose_int8_data.cpp  mlp_glucose_int8_data.h  mlp_int8_model_data.cpp  mlp_int8_model_data.h  seizure_main.cpp  seizure_mlp_int8_model_data.cpp  seizure_mlp_int8_model_data.h  svm_model.cpp  svm_model.h
examples/hello_world/rp2/: output_handler.cpp
